# oracle-token-platform

./: .gitignore  .vercelignore  ARCHITECTURE.md  Anchor.toml  QUICKSTART.md  README.md  TokenBalance.tsx  app.tsx  app.tsx.backup  app.tsx.backup2  auto-resolve-ci.cjs  auto-resolve.cjs  auto-sports-markets-ci.cjs  check-markets.ts  check-program.ts  client.ts  create-market.ts  create-market2.ts  create-markets.ts  deploy.sh  frontend-example.tsx  index.html  init-vault.ts  init.ts  initialize-platform.ts  main.tsx  mint-tokens.ts  package-lock.json  package.json  test-bet.ts  test.ts  vite.config.ts
.github/workflows/: auto-resolve.yml  auto-sports-markets.yml
programs/oracle-token/: Cargo.toml
programs/oracle-token/src/: lib.rs
src/: oracle_token_idl.json
