[package]
name = "oracle-token"
version = "0.1.0"
description = "Oracle Token Prediction Market on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"

[profile.release]
overflow-checks = true
